--- a/shippable.yml
+++ b/shippable.yml
@@ -9,5 +9,7 @@ build:
   ci:
     - mkdir -p shippable/codecoverage
     - pip install coverage
-    - coverage run --branch python_test/mounttest.py
+    - ls
+    - pwd
+    - coverage run python_test/mounttest.py
     - coverage xml -o shippable/codecoverage/coverage.xml python_test/mounttest.py
